# Productimate-Content-Generator

./: .gitignore  README.md  basics.ipynb  pyproject.toml  requirements.txt
api/: main.py  models.py
app/: app.py  chat_interface.py  streamlit_app.py
data/: social_media_link.json
faiss_index/: index.faiss  index.pkl
src/: __init__.py  langchain_utils.py  rag_pipeline.py  rebuild_index.py
src/agents/: base_agent.py  social_media_agent.py
src/chains/: base_chain.py  facebook_chain.py  instagram_chain.py  linkedin_chain.py
src/loaders/: indexer.py  retriever.py  splitter.py  vector_store.py  web_loader.py
src/prompts/: social_media_prompt.py
src/tools/: calendar_tools.py  content_tools.py  strategy_tools.py
